fixed footer links z-index

--- a/css/modules/footer.styl
+++ b/css/modules/footer.styl
@@ -11,6 +11,7 @@ footer
 .footer-top
 	position relative
 	top 44px
+	z-index 9
 	background-color #007bbd
 	&:before
 		content ''
@@ -52,7 +53,7 @@ footer
 .footer-image
 	position absolute
 	bottom 0
-	z-index 1
+	z-index 10
 	@media all and (max-width: 992px)
 		display none
 	img
